quick deploy test

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Talk to a swimbot Today!</title>
+    <title>Talk to a swimbot today!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Speak with a swimbot!</h1>
+      <h1>Speak with a swimbot today!</h1>
       <p>Here you can have a conversation with a swimbot.
         Ask them whatever you'd like and follow up on your questions. They have some memory, so they will be able to
       keep track of the conversation (up to a certain extent!). Also, be sure to wait a few seconds after clicking submit.
