add version history page, modifications to title, and other tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>Speak with a swimbot!</h1>
-      <p>Here you can have a conversation with a swimbot.
+      <h1>Swimbot Speak<span class="small-link">  <a href="version_history.html" class="small-link" target="_blank">(v0.1)</a></span></h1>
+       <p>Here you can have a conversation with a swimbot.
         Ask them whatever you'd like and follow up on your questions. They have some memory, so they will be able to
       keep track of the conversation (up to a certain extent!). Also, be sure to wait a few seconds after clicking submit.
     Swimbots need a bit of time to think! <br><br>
-  Be creative. For example, you can ask questions as if you are a swimbot interacting with them as well. Try to build a friendship.
-See what secrets or special places they will show or tell you about. Can you make a new friend?</p>
+  Be creative! For example, you can ask questions as if you are a swimbot interacting with them as well. Try to build a friendship.
+See what secrets or special places they will show or tell you about. Can you make a new friend? You might be surprised about what
+they have to share with you.</p>
 
       <label for="promptInput">Ask a question:</label>
       <div class="input-wrapper">
@@ -32,9 +33,24 @@ See what secrets or special places they will show or tell you about. Can you mak
         <div id="loadingIndicator"></div>
       </div>
 
+      <br>
+      <br>
+
+      <div class="footer">
+        <p>
+          <a href="version_history.html" class="small-link" target="_blank">Version History</a> |
+          <a href="https://github.com/LukaNeg/swimbot-chatbot" class="small-link" target="_blank">
+            GitHub Repository
+          </a> |
+          <a href="https://lukaneg.github.io/" class="small-link" target="_blank">Swimbot Speak created by Luka Negoita</a>
+          <br>
+          <a href="https://swimbots.com/" class="small-link" target="_blank">Learn more about Jeffrey Ventrella's swimbots and GenePool here</a>
+        </p>
+      </div>
 
     </div>
-	  <script src="generate.js"></script>
+
+    <script src="generate.js"></script>
 
   </body>
 </html>
