add thanks for daniel shiffman

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@ they have to share with you.</p>
           <a href="https://lukaneg.github.io/" class="small-link" target="_blank">Swimbot Speak created by Luka Negoita</a>
           <br>
           <a href="https://swimbots.com/" class="small-link" target="_blank">Learn more about Jeffrey Ventrella's swimbots and GenePool here</a>
+          <br>
+          <a href="https://thecodingtrain.com/tracks/data-and-apis-in-javascript" class="small-link" target="_blank"><b>🌟 Special thanks to Daniel Shiffman at The Coding Train 🌈 for the AWESOME tutorials that helped me learn about node.js and make this happen</b></a>
         </p>
       </div>
 
