--- a/public/version_history.html
+++ b/public/version_history.html
@@ -8,47 +8,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      font-family: 'Roboto', sans-serif;
-      background-color: #a3e3ff;
-      color: #333;
-      padding: 2rem;
-      line-height: 1.6;
-    }
-
-    h1 {
-      font-size: 1.5em;
-    }
-
-    h2 {
-      font-size: 1.2em;
-    }
-
-    .version-history-item {
-      margin-bottom: 1em;
-    }
-
-    .version-history-item h3 {
-      margin-bottom: 0.5em;
-    }
-
-    .version-history-item p {
-      margin-bottom: 0.5em;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>Swimbot Speak Version History</h1>
 
     <div class="version-history-item">
-      <h2>Version 0.1 (April 2023)</h2>
+      <h2>Version 0.1 (30 April 2023)</h2>
       <h3>Description:</h3>
       <p>Initial release of the Swimbot Speak engine that allows users to converse with a swimbot. The swimbot has a memory of 8 messages and 8 replies.</p>
     </div>
+
+    <div class="version-history-item">
+      <h2>Version 0.2 (01 May 2023)</h2>
+      <h3>Description:</h3>
+      <p> - Added controls for tweaking the swimbot's brain, including personality and mental state.</p>
+    </div>
+
 
   </div>
 </body>
