add current swimbot action returned as JSON

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@ You can also play around with what the swimbot is thinking about most right now.
         <div id="loadingIndicator"></div>
       </div>
 
+      <div class="center-container">
+        <h4 style="padding-right: 1rem;">Current Action:</h4><div id="actionContainer" class="action-container"></div>
+      </div>
+
       <br>
       <br>
       <div class="parameters-wrapper">
