--- a/public/version_history.html
+++ b/public/version_history.html
@@ -15,9 +15,12 @@
     <h1>Swimbot Speak Version History</h1>
 
     <div class="version-history-item">
-      <h2>Version 0.1 (30 April 2023)</h2>
+      <h2>Version 0.3 (07 May 2023)</h2>
       <h3>Description:</h3>
-      <p>Initial release of the Swimbot Speak engine that allows users to converse with a swimbot. The swimbot has a memory of 8 messages and 8 replies.</p>
+      <p>
+        - Response is now returned as a JSON string which is parsed into a response and current action the swimbot is taking.<br>
+        - The current action is displayed below the response
+      </p>
     </div>
 
     <div class="version-history-item">
@@ -26,6 +29,11 @@
       <p> - Added controls for tweaking the swimbot's brain, including personality and mental state.</p>
     </div>
 
+    <div class="version-history-item">
+      <h2>Version 0.1 (30 April 2023)</h2>
+      <h3>Description:</h3>
+      <p>Initial release of the Swimbot Speak engine that allows users to converse with a swimbot. The swimbot has a memory of 8 messages and 8 replies.</p>
+    </div>
 
   </div>
 </body>
